Add Finance Quizz, +graphic(white)

--- a/Quizz_Standalone/html/domaines/listeDomaineFinance.html
+++ b/Quizz_Standalone/html/domaines/listeDomaineFinance.html
@@ -35,11 +35,21 @@
 	<div class="content">
 			<br/>
 			<div class="domaine left dialogable" name="businessanalyst">
-				 Business Analyst
+			 	Business Analyst
 			</div>
 			<div class="domaine right dialogable" name="modelisateur">
-				 Modélisateur
+			 	Modélisateur
 			</div>
+			<div class="domaine left dialogable" name="trading">
+				Trading
+			</div>
+			<div class="domaine right dialogable" name="ingenieriefinanciere">
+				Ingénierie Financière
+			</div>
+			<div class="domaine middle dialogable" name="analysequantitative">
+				Analyse Quantitative
+			</div>
+
 
 <!-- 
 			<div class="domaine right dialogable" name="datascientist">
