--- a/Quizz_Standalone/html/listeInformationsSG.html
+++ b/Quizz_Standalone/html/listeInformationsSG.html
@@ -28,8 +28,7 @@
  <body>
     <div class="content">
 		<div class="domaine left dialogable" name="quizzsg">
-			Quizz sur Société Générale
-			<div> hidden ligne</div>
+			<div style="display:flex;justify-content:center;align-items:center;height:122px;">Quizz sur Société Générale</div>
 		</div>
 		<div class="domaine right dialogable" name="calculatrice">
 			Test : suis-je prêt(e) pour un entretien d'embauche ?
