--- a/Quizz_Standalone/html/quizzs/dataScientist.html
+++ b/Quizz_Standalone/html/quizzs/dataScientist.html
@@ -20,43 +20,42 @@
 			<p class="question">Combien y a –t-il de data scientists au sein du pôle de Banque de Grande clientèle et Solutions investisseurs (GBIS) ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">4</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				</br>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">20</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				</br>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">100</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				</br>
 				<div class="choixMultiple choix4">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai" data-value="Nous employons 500 Data scientists">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">500</span>
-					<img class="icon" src="../images/checked.png"></img>
-				</div>
+					<span class="reponseMultiple">500</span>				</div>
 				</br>
 				<div class="choixMultiple choix5">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">2500</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
                 <img class="submitAnswers" src="../images/verify.png"></img>
 			</div>
@@ -67,43 +66,43 @@
 			<p class="question">Que fait un/une data scientist chez GBIS ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai" data-value="Toutes les réponses sont vraies">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Des automates de trading</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Des algorithmes anti-fraude</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Des modèles de marketing prédictif</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix4">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Des chatbots intelligents</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix5">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Des réseaux de neurones LSTM</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
 			</div>
@@ -113,35 +112,35 @@
 			<p class="question">Quelles sont les compétences clés d’un data scientist ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai" data-value="Toutes les réponses sont vraies">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Les mathématiques</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">L’informatique</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Le métier</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix4">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">La communication</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
 			</div>
@@ -149,38 +148,38 @@
 		
 		
 		<div class="propositionVisible question4">
-			<p class="question">Quelles sont les qualités principales d’un/une data scientist chez GBIS ?</p>
+			<p class="question">Quelles sont les qualités principales d’un/une data scientist ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Classement dans le top 1% sur Kaggle</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai" data-value="De bonnes bases en statistiques et machine learning, ainsi qu'une bonne communication">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Des bases solides en statistique et machine learning</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Une expertise en deep learning</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix4">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Une bonne communication</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
 			</div>
@@ -191,35 +190,35 @@
 			<p class="question">Dans quelle forêt un data scientist trouve-t-il toujours son chemin ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">La forêt noire</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">La Forêt de Fangorn</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai" data-value="Les modèles de Random Forest sont classiques en machine learning">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">La Forêt Aléatoire</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix4">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">La Forêt Amazonienne</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>		
 			</div>
@@ -229,35 +228,35 @@
 			<p class="question">Qu’est-ce qu’un data scientist est le plus susceptible de commander au restaurant ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai" data-value="L'eau pétillante, en anglais sparkling wateure. H2O et Spark sont deux outils de programmation en machine learning et de cluster computing">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">L'eau pétillante</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Une forêt noire</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Du soda</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix4">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Une salade</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
 			</div>
@@ -267,35 +266,35 @@
 			<p class="question">Quels animaux un data scientist peut-il être amené à apprivoiser ?</p>
 			<div class="jeuReponse" data-derniere-question="true">
 				<div class="choixMultiple choix1">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai" data-value="Python, le language, l'éléphant, un logo apprécié des outils de big data, la gazelle, mascotte d'Impala un èce q elle seurche angeaillene">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Un python</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Un éléphant</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Une gazelle</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix4">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Un chameau</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
 			</div>
