--- a/Quizz_Standalone/html/quizzs/innovation.html
+++ b/Quizz_Standalone/html/quizzs/innovation.html
@@ -21,27 +21,27 @@
 			<div class="question"> Qu’appelle-t-on une innovation disruptive ?</div>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai" data-value="Technologies nouvelles, moyens limités, création d’un besoin">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Technologies nouvelles, moyens limités, création d’un besoin</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				</br>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Révolution technologique, financement important, amélioration de l’efficacité opérationnelle </span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				</br>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Amélioration d’une technologie déjà existante, financement limité, amélioration de l’efficacité opérationnelle </span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				</br>
 				</br>
@@ -53,27 +53,27 @@
 			<p class="question">Quelles sont les règles d’or pour innover ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Mesurer les avantages et les inconvénients, erreurs et échecs difficilement acceptables </span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Douter du changement et absorber avec difficultés l’échec</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai" data-value="Accepter le changement, encourager l’échec et la prise de risque, apprendre de ses erreurs">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Accepter le changement, encourager l’échec et la prise de risque, apprendre de ses erreurs</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>	
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
@@ -81,30 +81,30 @@
 		</div>
 		
 		<div class="propositionVisible question3">
-			<p class="question">A quels problèmes peut être confronté l'innovateur ?</p>
+			<p class="question">A quels problèmes est confronté l'innovateur ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai" data-value="Incompréhension et manque d’ouverture des interlocuteurs et Trouver un espace de travail">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple" >Incompréhension et manque d’ouverture des interlocuteurs</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fause">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Impossibilité à rencontrer des start-ups </span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Trouver un espace de travail</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
@@ -115,27 +115,27 @@
 			<p class="question">Où trouver le financement pour l'innovation ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai" data-value="Toutes les réponses sont vraies">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Auprès de son équipe où je collabore</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Auprès de son business angel appelé Sponsor</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Auprès d'un budget dédié Innovation</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
@@ -143,6 +143,7 @@
 		</div>
 		
 		<div class="propositionVisible question5">
+					<img class="icon" src="../images/cancel.png"></img>
 			<p class="question">Quels outils méthodologique peuvent favoriser l’innovation ?</p>
 			<div class="jeuReponse" data-derniere-question="true">
 				<div class="choixMultiple choix1">
@@ -150,23 +151,22 @@
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple" >Pack office Microsoft et paper board</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai" data-value="Le lyne start-up et le design sinekineg" >
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Le lean start-up et le design thinking</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Un tableau dynamique et brainstorming</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
