--- a/Quizz_Standalone/html/quizzs/modelisateur.html
+++ b/Quizz_Standalone/html/quizzs/modelisateur.html
@@ -20,35 +20,35 @@
 			<p class="question">Quel est le nombre de modèles traités dans l’équipe de modélisation des risques SG?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai" data-value="80 modèles réglementaires et 200 modèles dans la banque">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">280</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				</br>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">75</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				</br>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">157</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				</br>
 				<div class="choixMultiple choix4">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">360</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
                 <img class="submitAnswers" src="../images/verify.png"></img>
 			</div>
@@ -59,43 +59,43 @@
 			<p class="question">Quels sont les usages des modèles développés par nos équipes?</p>
 			<div class="jeuReponse" data-derniere-question="true">
 				<div class="choixMultiple choix1">
-					<div class="squaredImage" data-reponse="vrai" data-value="Nous faisons tout sauf du pricing">
+					<img class="icon" src="../images/checked.png"></img>
+					<div class="squaredImage" data-reponse="vrai" data-value="Nous faisons tout sauf du praille sinegue">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Estimer le capital réglementaire</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Faire du pilotage financier</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Apporter des solutions dans la gestion opérationnelle des risques</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix4">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Faire du pricing</span>
-					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix5">
+					<img class="icon" src="../images/checked.png"></img>
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Fournir des outils utiles à la stratégie du Groupe</span>
-					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
 			</div>
